# steno10k

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  entrypoint.sh  openapi.json
backend/: pyproject.toml
backend/src/steno10k/: __main__.py  api.py
backend/src/steno10k/api/: __init__.py  configsvc.py  deps.py  dto.py  envelope.py  preflight.py  runq.py  sse.py  stages.py  storage.py
backend/src/steno10k/cli/: app.py  commands.py  context.py  output.py  run.py
backend/src/steno10k/contracts/: config.py  (+12 more)
backend/tests/: test_config.py  test_domain.py  test_events.py  test_health.py  test_manifest.py  test_primitives.py  test_registry.py  test_runner.py  test_slug.py  test_stage.py  test_version.py
backend/tests/api/: test_artifacts.py  test_config_prompts.py  test_configsvc.py  test_dto.py  test_envelope.py  test_preflight.py  test_projects_sets.py  test_recordings.py  test_runq.py  test_runq_preflight.py  test_runs.py  test_spa.py  test_sse.py  test_stages.py  test_storage.py  test_system.py
backend/tests/cli/: test_config.py  test_import.py  test_projects.py  test_recordings.py  test_run.py  test_sets.py  test_status.py
backend/tests/lib/: test_docx_bundle.py  test_docx_render.py  test_ffmpeg.py  test_import_boundary.py  test_ingest.py  test_llm.py  test_make_llm.py  test_names.py  test_prompts.py  test_retry.py  test_transcriber.py
backend/tests/stages/: conftest.py  support.py  test_bundle.py  test_chunk.py  test_clean.py  test_import_boundary.py  test_integration.py  test_merge.py  test_normalize.py  test_notify.py  test_pool.py  test_prompts_helper.py  test_scope.py  test_summarize.py  test_transcribe.py
(+191 files in other folders)
