[project]
name = "steno10k"
version = "0.1.0"
description = "Local-first audio -> transcript + summary pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "faster-whisper>=1.0",
    "openai>=1.50",
    "httpx>=0.27",
    "python-docx>=1.1",
]

[dependency-groups]
dev = ["ruff>=0.7", "mypy>=1.13", "pytest>=8.3", "types-pyyaml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steno10k"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["faster_whisper.*", "docx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
